# cycle-consistent-model-merging

./: .gitignore  .pre-commit-config.yaml  README.md  env.yaml  mkdocs.yml  pyproject.toml  results.json  setup.cfg
.github/workflows/: publish.yml  test_suite.yml
0.0/: 404.html  index.html
0.0/search/: search_index.json
conf/: cnn.yaml  default.yaml  func_maps.yaml  matching.yaml  matching_n_models.yaml  matching_n_tasks.yaml  merge_n_models.yaml  merge_n_models_scaling.yaml  mlp.yaml  resnet.yaml  resnet50.yaml  split_data_in_tasks.yaml  train.yaml  train_tasks.yaml  vgg.yaml  vit.yaml
conf/dataset/: cifar10.yaml  cifar100.yaml  cifar100_hf.yaml  cifar100_tasks.yaml  emnist.yaml  fashion_mnist.yaml  mnist.yaml  tiny_imagenet.yaml
conf/hydra/: default.yaml
conf/matching/: git_rebasin.yaml  match.yaml  match_and_sync.yaml  match_and_sync_resnet.yaml  match_many.yaml  match_n_models.yaml  match_n_tasks.yaml  match_then_sync.yaml  match_then_sync_resnet.yaml  match_two_models.yaml  merge_n_models.yaml  mlp.yaml  resnet.yaml  vgg.yaml
conf/model/: cnn.yaml  mlp.yaml  resnet18_pt.yaml  resnet20.yaml  resnet50.yaml  vgg.yaml  vit.yaml
conf/nn/: cnn.yaml  default.yaml  mlp.yaml  n_tasks.yaml  resnet.yaml  resnet50.yaml  vgg.yaml  vit.yaml  vit_no_identity.yaml
conf/train/: cnn.yaml  mlp.yaml  resnet.yaml  resnet18_pt.yaml  resnet50.yaml  vgg.yaml  vit.yaml
conf/trainer/: cnn.yaml  mlp.yaml  resnet.yaml  resnet18_pt.yaml  resnet50.yaml  vgg.yaml  vit.yaml
docs/: index.md
doctest-output/: param_list.gv
misc/: palette.json  palette2.json
notebooks/: alternating_diffusion.ipynb  analyze_match_many.ipynb  analyze_match_pairwise.ipynb  analyze_merge_many.ipynb  demo.ipynb  func_maps.ipynb  func_merging.ipynb  get_perm_dict.ipynb  get_results_from_wandb.ipynb  get_results_match_pairwise.ipynb  get_results_merge.ipynb  get_results_scaling.ipynb  get_results_width_exp.ipynb  gradient_in_universal_basin.ipynb  gradient_test_perm_indexing.ipynb  initialization_exp.ipynb  losses.json  matching.ipynb  matching_cnns.ipynb  matching_resnet50.ipynb  matching_transformers.ipynb  merge_models_n_tasks.ipynb  pairwise_reference_baseline.ipynb  plot_loss_contours_n_models.ipynb  plot_loss_countours.ipynb  plot_permutation_matrices.ipynb  quadratic_matching.ipynb  quadratic_problem.ipynb  repair.ipynb  vector_extrapolation.ipynb  weight_func_maps.ipynb
notebooks/dev/: convert_hf_to_torchvision_dataset.ipynb  generalized_dot_product.ipynb  move_wandb_artifacts.ipynb  quadratic_problem.ipynb  random.ipynb  weight_similarity.ipynb
output/CIFAR10/: VGG16_1.json  (+3 more)
shell_scripts/: match_and_eval.sh  move_artifacts.sh  run_N_seeds.sh  run_all_approaches.sh  run_all_mergers.sh  run_all_pairs.sh  run_all_seeds.sh  width_exp.sh
tests/: conftest.py  test_checkpoint.py  test_configuration.py  test_resume.py
(+265 files in other folders)
