[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "ccmm"
description = "Cycle consistent matching and merging."
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = "==3.9.19"
dependencies = [
    "rich",
    "python-dotenv",
    "GitPython", # Add the current package name as a fixed dependency
    "ccmm",
    "wandb>=0.21.1",
    "hydra-core>=1.3.2",
    "tqdm>=4.67.1",
    "scipy>=1.13.1",
    "ipykernel>=6.30.1",
    "matplotlib==3.8.4",
    "seaborn>=0.13.2",
    "nn-template-core==0.2.2",
    "pytorch-lightning==1.7.7",
    "lightning-bolts==0.7.0",
    "lightning-utilities==0.11.2",
    "torchmetrics==0.10.3",
    "model-merging",
    "graphviz>=0.21",
    "torchviz>=0.0.3",
    "torchvision",
    "numpy==1.25.2",
    "torch==1.13.0",
    "scikit-learn>=1.6.1",
    "backports-strenum>=1.3.1",
    "datasets>=4.0.0",
]

maintainers = [

    { name = "Donato Crisostomi", email = "donatocrisostomi@gmail.com" },

]

[tool.uv.sources]
fmmm = { workspace = true }
model-merging = { path = "../model-merging", editable = true }

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-ra"
testpaths = ["src/tests"]

[tool.mypy]
files = ["src/**/*.py", "src/tests/**/*.py"]
ignore_missing_imports = true

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "node_modules",
]
line-length = 88
indent-width = 4
target-version = "py38"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[dependency-groups]
dev = [
    "model-merging",
]
