[metadata]
name = cycle-consistent-model-merging
description = A new awesome project.
url = https://github.com/crisostomi/cycle-consistent-model-merging
long_description = file: README.md
author = Donato Crisostomi
author_email = donatocrisostomi@gmail.com
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    nn-template-core==0.2.*

    # Add project specific dependencies
    # Stuff easy to break with updates
    pytorch-lightning==1.7.*
    torchmetrics==0.10.*
    hydra-core==1.2.*
    wandb
    streamlit
    lightning-bolts
    # hydra-joblib-launcher

    # Stable stuff usually backward compatible
    rich
    dvc
    python-dotenv
    matplotlib
    stqdm
    scipy

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
